force-app/main/default/objects/QCC_Coding_Table__mdt/QCC_Coding_Table__mdt.object-meta.xml
<CustomObject>
    <description>Stores coding levels</description>
    <label>QCC Coding Table</label>
    <pluralLabel>QCC Coding Tables</pluralLabel>
</CustomObject>