force-app/main/default/objects/QCC_Coding_Table__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Case coding values</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay Handling</fullName>
                <default>true</default>
                <label>Delay Handling</label>
            </value>
            <value>
                <fullName>Facilities/ Signage</fullName>
            </value>
            <value>
                <fullName>Catering Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Customer behaviour/Customer offload</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Valet</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>Customer Behaviour</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Inflight Products</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Inflight Entertainment</fullName>
            </value>
            <value>
                <fullName>Customer Privacy</fullName>
            </value>
            <value>
                <fullName>Chauffeur Drive</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Injury/Illness/safety</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unaccompanied Minor</fullName>
            </value>
            <value>
                <fullName>Damaged/Lost Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>