force-app/main/default/objects/QCC_Coding_Table__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>Sub Category</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific Needs</fullName>
                <default>true</default>
                <label>Specific Needs</label>
            </value>
            <value>
                <fullName>Foreign object in food/food poisoning</fullName>
            </value>
            <value>
                <fullName>Documentation Issue</fullName>
            </value>
            <value>
                <fullName>Dangerous Goods</fullName>
            </value>
            <value>
                <fullName>Customer offload</fullName>
            </value>
            <value>
                <fullName>Customer behaviour</fullName>
            </value>
            <value>
                <fullName>Theft or damage</fullName>
            </value>
            <value>
                <fullName>Specific Event</fullName>
            </value>
            <value>
                <fullName>Responsible Service of Alcohol</fullName>
            </value>
            <value>
                <fullName>Customer Flight ban</fullName>
            </value>
            <value>
                <fullName>Beverage Quality/Selection</fullName>
            </value>
            <value>
                <fullName>Duty Free</fullName>
            </value>
            <value>
                <fullName>Medical Reaction</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Media Communications</fullName>
            </value>
            <value>
                <fullName>Driver behaviour</fullName>
            </value>
            <value>
                <fullName>Damaged personal property</fullName>
            </value>
            <value>
                <fullName>Fair Trading</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Seating Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>