force-app/main/default/objects/QCC_Coding_Table__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliment</fullName>
                <default>true</default>
                <label>Compliment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>